5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4153/executions/1785_3140.log
== TEST (2019-05-30 11:18:24) 
-- CODE:
from numpy import *

#vetor contendo n numeros reais positivos
v = array(eval(input("Insira um vetor: ")))

i = 0
m = 0

while(i < size(v)):
	m = m + v[i]**5
	i = i + 1
media = (m/size(v))**(1/5)
print(media)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:18:59) 
-- CODE:
from numpy import *

#vetor contendo n numeros reais positivos
v = array(eval(input("Insira um vetor: ")))

i = 0
m = 0

while(i < size(v)):
	m = m + v[i]**5
	i = i + 1
media = (m/size(v))**(1/5)
print(round(media,2)
-- ERROR:
File "XXXX", line 14
    
                        ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:19:02) 
-- CODE:
from numpy import *

#vetor contendo n numeros reais positivos
v = array(eval(input("Insira um vetor: ")))

i = 0
m = 0

while(i < size(v)):
	m = m + v[i]**5
	i = i + 1
media = (m/size(v))**(1/5)
print(round(media, 2)
-- ERROR:
File "XXXX", line 14
    
                         ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:19:23) 
-- CODE:
from numpy import *

#vetor contendo n numeros reais positivos
v = array(eval(input("Insira um vetor: ")))

i = 0
m = 0

while(i < size(v)):
	m = m + v[i]**5
	i = i + 1
media = (m/size(v))**(1/5)
print(round(media, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 11:19:39) 
-- CODE:
from numpy import *

#vetor contendo n numeros reais positivos
v = array(eval(input("Insira um vetor: ")))

i = 0
m = 0

while(i < size(v)):
	m = m + v[i]**5
	i = i + 1
media = (m/size(v))**(1/5)
print(round(media, 2))
-- EXECUTION TIME:
0.572238
-- TEST CASE 1:
---- input:
[1.9,2.9,3.9,4.9,5.9,6.9,7.9]
---- correct output:
6.07
---- user output:
6.07
-- TEST CASE 2:
---- input:
[1.1,2.2,3.3,4.4,5.5,6.6]
---- correct output:
5.05
---- user output:
5.05
-- TEST CASE 3:
---- input:
[1.1,2.1,3.1,4.1,5.1]
---- correct output:
3.97
---- user output:
3.97
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
